--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,6 +1,7 @@
 [features]
 seeds = false
 skip-lint = false
+
 [programs.localnet]
 my_shogi_nft = "EA7qTJVQeghgYfoFBNL9mAQNxXXvq8hrpHhsqsip1Kgg"
 
@@ -13,3 +14,7 @@ wallet = "/root/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+[toolchain]
+solana = "1.17.17"
+anchor = "0.29.0"
