--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
+    "name": "my-shogi-nft",
+    "version": "0.1.0",
+    "description": "Shogi NFT Project",
+    "private": true,
+    "workspaces": [
+        "my-shogi-nft/app"
+    ],
     "scripts": {
+        "test": "anchor test",
         "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
+        "build": "anchor build",
+        "start": "anchor deploy"
     },
     "dependencies": {
-        "@coral-xyz/anchor": "^0.28.0"
+        "@coral-xyz/anchor": "^0.28.0",
+        "@solana/web3.js": "^1.91.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
-        "@types/chai": "^4.3.20",
-        "@types/mocha": "^9.1.1",
-        "chai": "^4.3.4",
-        "mocha": "^9.0.3",
+        "@types/chai": "^4.3.11",
+        "@types/mocha": "^10.0.6",
+        "chai": "^4.3.10",
+        "mocha": "^10.2.0",
         "prettier": "^2.6.2",
         "ts-mocha": "^10.0.0",
-        "typescript": "^4.3.5"
-    }
+        "typescript": "^5.3.3"
+    },
+    "packageManager": "yarn@4.5.3"
 }
